[gd_scene load_steps=4 format=3 uid="uid://dpjmvdqo37mnt"]

[ext_resource type="Theme" uid="uid://vq7t843uek2d" path="res://ui/ui_theme.tres" id="1_22ktl"]
[ext_resource type="Script" path="res://scripts/ui/settings_ui.gd" id="1_dx2j5"]

[sub_resource type="GDScript" id="GDScript_7pa04"]
resource_name = "height_value"
script/source = "extends Label


func _on_player_height_slider_value_changed(value: float) -> void:
	text = str(snappedf(value, 0.1))
"

[node name="SettingsUI" type="VBoxContainer"]
theme = ExtResource("1_22ktl")
theme_override_constants/separation = 8
script = ExtResource("1_dx2j5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="SettingsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="BackButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
current_tab = 0

[node name="Movement" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 0
metadata/_tab_index = 0

[node name="SnapTurning" type="HBoxContainer" parent="TabContainer/Movement"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="TabContainer/Movement/SnapTurning"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Snap turning:"
vertical_alignment = 1

[node name="SnapTurningCB" type="CheckBox" parent="TabContainer/Movement/SnapTurning"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true
icon_alignment = 1

[node name="DirectMovement" type="HBoxContainer" parent="TabContainer/Movement"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="TabContainer/Movement/DirectMovement"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Direct movement:"
vertical_alignment = 1

[node name="DirectMovementCB" type="CheckBox" parent="TabContainer/Movement/DirectMovement"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true
icon_alignment = 1

[node name="PlayerHeight" type="HBoxContainer" parent="TabContainer/Movement"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Movement/PlayerHeight"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Height:"

[node name="PlayerHeightSlider" type="HSlider" parent="TabContainer/Movement/PlayerHeight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 2.5
step = 0.05
value = 1.0

[node name="HeightValue" type="Label" parent="TabContainer/Movement/PlayerHeight"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0.0 m"
script = SubResource("GDScript_7pa04")

[node name="Input" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="xAxisDeadZone" type="HBoxContainer" parent="TabContainer/Input"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Input/xAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "X axis dead zone"

[node name="xAxisDeadZoneSlider" type="HSlider" parent="TabContainer/Input/xAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.5
step = 0.01
value = 0.2

[node name="yAxisDeadZone" type="HBoxContainer" parent="TabContainer/Input"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Input/yAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Y axis dead zone"

[node name="yAxisDeadZoneSlider" type="HSlider" parent="TabContainer/Input/yAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.5
step = 0.01
value = 0.1

[node name="Volume" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="SFXVolume" type="HBoxContainer" parent="TabContainer/Volume"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Volume/SFXVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sound volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="TabContainer/Volume/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="TabContainer/Volume"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Volume/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Volume/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Save" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Reset" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[connection signal="pressed" from="TabContainer/Movement/SnapTurning/SnapTurningCB" to="." method="_on_snap_turning_cb_pressed"]
[connection signal="pressed" from="TabContainer/Movement/DirectMovement/DirectMovementCB" to="." method="_on_direct_movement_cb_pressed"]
[connection signal="drag_ended" from="TabContainer/Movement/PlayerHeight/PlayerHeightSlider" to="." method="_on_player_height_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Movement/PlayerHeight/PlayerHeightSlider" to="TabContainer/Movement/PlayerHeight/HeightValue" method="_on_player_height_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Input/xAxisDeadZone/xAxisDeadZoneSlider" to="." method="_on_x_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Input/yAxisDeadZone/yAxisDeadZoneSlider" to="." method="_on_y_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Volume/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Volume/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Buttons/Reset" to="." method="_on_reset_pressed"]
